[package]
name = "font-rs"
version = "0.1.3"
license = "Apache-2.0"
authors = [ "Raph Levien <raph@google.com>" ]
keywords = ["font", "truetype", "ttf"]
description = "A font renderer written (mostly) in pure, safe Rust"
repository = "https://github.com/google/font-rs"
build = "build.rs"

[dependencies]
hashmap_core = "<=0.1.8"
math = { git = "https://github.com/roblabla/math.rs.git" }

[features]
sse = []

[target.'cfg(target_feature = "sse")'.build-dependencies]
gcc = "0.3"
