[package]
name = "font-rs"
version = "0.1.3"
license = "Apache-2.0"
authors = [ "Raph Levien <raph@google.com>" ]
keywords = ["font", "truetype", "ttf"]
description = "A font renderer written (mostly) in pure, safe Rust"
repository = "https://github.com/google/font-rs"
build = "build.rs"

[dependencies]
math = { git = "https://github.com/roblabla/math.rs.git" }
# When built as part of libstd
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.2", optional = true }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[dependencies.hashbrown]
version = "0.4.0"


[features]
default = []
sse = []
rustc-internal-api = []
rustc-dep-of-std = ["core", "compiler_builtins", "alloc", "rustc-internal-api", "hashbrown/rustc-dep-of-std"]
raw = []

[target.'cfg(target_feature = "sse")'.build-dependencies]
gcc = "0.3"
