[package]
name = "font-rs"
version = "0.1.3"
license = "Apache-2.0"
authors = [ "Raph Levien <raph@google.com>" ]
keywords = ["font", "truetype", "ttf"]
description = "A font renderer written (mostly) in pure, safe Rust"
repository = "https://github.com/google/font-rs"

[dependencies]
log = "0.4.8"
hashbrown = { version = "0.5.0", default-features = false }

[features]
default = ["std"]
std = []
sse = []
